# ta_graph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_DATABASE.md  README_DOCKER.md  docker-compose.yml  example_brooks_system.py  main.py  pyproject.toml  pytest.ini  run_tests.sh
docs/: CHECKLIST.md  DEPLOYMENT.md  SUPERVISOR_PATTERN.md  SUPERVISOR_SUCCESS.md  bitget_symbol_format.md
frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  AppLayout.tsx  index.css  store.ts
scripts/: docker-helper.sh  init_database.py  run_dashboard.py
src/: config.py  dashboard.py  enhanced_logging.py  graph.py  logger.py  position_management_workflow.py  prompts.py  state.py  supervisor_graph.py
src/database/: __init__.py  account_manager.py  models.py  persistence_manager.py  session.py  trading_history.py
src/monitoring/: __init__.py  heartbeat.py
src/nodes/: brooks_analyzer.py  execution.py  followthrough_analyzer.py  market_data.py  order_monitor.py  position_sync.py  risk.py  risk_manager.py  strategy_enhanced.py
src/notification/: __init__.py  alerts.py
src/safety/: __init__.py  conviction_tracker.py  equity_protector.py
src/trading/: __init__.py  exchange_client.py
src/utils/: brooks_chart.py  candle_timer.py  error_handler.py  event_bus.py  model_manager.py  notification_service.py  price_calculator.py  timeframe_config.py  timeout_decorator.py  trade_filters.py
tests/: README.md  __init__.py
tests/integration/: test_workflow.py
tests/monitoring/: test_heartbeat.py
tests/trading/: __init__.py  (+2 more)
(+17 files in other folders)
